 - kotlin-stdlib: v1.6.21 -> v2.0.20
 - kotlinx-coroutines: v1.6.4 (custom build) -> v1.9.0
 - jetbrains-annotations: v23.0.0 -> REMOVED (now included in kotlin-stdlib)
Changes to jar file locations:
 - Moved LazyLib-Console.jar and Kotlin-Runtime.jar to jars/internal, to
   better signify that they aren't meant to be added as dependencies
Changes to LazyFont:
 - Added buildUntilLimit(String line, float fontSize, float maxWidth), which
   returns a substring of line that will fit within maxWidth width
 - Unicode smart quotes (single and double) are converted into basic quotes
 - Attempting to create a DrawableString with missing character data will only
   log a warning once per missing character, instead of every time one is used
   (explanation: if the font doesn't define Ç, it will log a warning the first
    time you try to draw one while replacing the missing character with either
    a question mark, or empty space if the font doesn't define a question mark)
 - LazyFont.loadFont() will now make up fake data for a space character if the
   font file lacks one (it creates an invisible pixel with extra padding)
 - Cached fallback char used when font doesn't contain a requested character;
   very slight performance improvement
 - Added missing Javadoc to LazyChar
Removed org.lazywizard.lazylib.campaign.orbits.KeplerOrbit
 - Removed at the request of its contributor
Removed from org.lazywizard.lazylib.ui.LazyFont:
 - Removed drawText(); use createText() instead
 - Removed appendText(); use append() instead
 - Removed getColor() and setColor(); use get/setBaseColor() instead
 - Removed checkRebuild(); use triggerRebuildIfNeeded() instead

 2.8b (February 02, 2024)
==========================
Updated to be compatible with Starsector 0.97a
Changes to LazyFont:
 - Changed default blendSrc back to GL_SRC_ALPHA (was GL_ONE since 2.4c)
Deprecated org.lazywizard.lazylib.campaign.orbits.KeplerOrbit:
 - Deprecated at the request of its contributor

 2.8 (April 05, 2023)